--- a/css/css.css
+++ b/css/css.css
@@ -25,7 +25,7 @@ body {
   margin-left: -200px;
   border-radius: 2px;
   box-shadow: 10px 13px 10px 0 rgba(0,0,0,0.3);
-  background: #fff;
+  background: #fff; 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
@@ -38,7 +38,7 @@ body {
   transform: rotate(45deg);
 
   .stripe {
-    background: #ffffff;
+    background: #ffffff; /* makes stripes invisible */
     width: 600px;
     height: 3px;
     margin-bottom: 16px;
