--- a/css/css.css
+++ b/css/css.css
@@ -25,7 +25,7 @@ body {
   margin-left: -200px;
   border-radius: 2px;
   box-shadow: 10px 13px 10px 0 rgba(0,0,0,0.3);
-  background: #fff; 
+  background: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
@@ -92,7 +92,7 @@ body {
 h1 {
   color: #353535;
   background-color: #eeeeeee0;
-  font-size: 50px;
+  font-size: 5vh;
   font-weight: 500;
   text-align: center;
   position: fixed;
@@ -113,7 +113,7 @@ h1 {
   padding-top: 1%;
   padding-bottom: 1%;
   text-align: center;
-  font-size: 35px;
+  font-size: 3vh;
   font-weight: 550;
   white-space: nowrap;
   background-color: #eeeeeee0;
